--- a/cse.html
+++ b/cse.html
@@ -410,7 +410,9 @@
             <input type="button" value="検索" onclick="OnButtonClick()"> 
             <br>
             <h3>検索結果</h3>
-            <div id="output"></div>
+            <div class="scroll_area" style="width:100%;max-width:600px;overflow-x:scroll;">
+                <div id="output"></div>
+            </div>
             </main>
             <footer class="footer">
                 <small class="footer_copyright">By CanoeWiki, Japan. &copy;2023 </small>
