--- a/cse.html
+++ b/cse.html
@@ -119,7 +119,7 @@
                         if(content == ""){
                             alert("一致するデータはありませんでした")
                         }else{
-                            target.innerHTML = "<table>"+content+"</table>";
+                            target.innerHTML = "<table style="width:100%;">"+content+"</table>";
                         }
                         
                     }
