--- a/cse.html
+++ b/cse.html
@@ -119,7 +119,7 @@
                         if(content == ""){
                             alert("一致するデータはありませんでした")
                         }else{
-                            target.innerHTML = "<table style="width:100%;">"+content+"</table>";
+                            target.innerHTML = "<table>"+content+"</table>";
                         }
                         
                     }
@@ -410,9 +410,8 @@
             <input type="button" value="検索" onclick="OnButtonClick()"> 
             <br>
             <h3>検索結果</h3>
-            <div class="scroll_area" style="width:100%;max-width:600px;overflow-x:scroll;">
-                <div id="output"></div>
-            </div>
+            <div id="output"></div>
+
             </main>
             <footer class="footer">
                 <small class="footer_copyright">By CanoeWiki, Japan. &copy;2023 </small>
