--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
                 <div class="trigger">
                     <div class="trigger-container">
                         <a class="menu-link active" href="/">HOME</a>
-                        <a class="menu-link" href="/about/">カヌーWikiについて</a>
                         <a class="menu-link" href="./cse.html">検索エンジン</a>
-                        <a class="menu-link" href="/blog/">ブログ</a>
+                        <a class="menu-link" href="./blog.html">ブログ</a>
                     </div>
                 </div>
             </nav>
